--- a/.htaccess
+++ b/.htaccess
@@ -6,12 +6,10 @@ deny from all
 Options +FollowSymLinks
 IndexIgnore */*
 RewriteEngine on
-#RewriteLog "/home/kevin/rewrite.log"
-#RewriteLogLeve 3
 
 # if a directory or a file exists, use it directly
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 
 # otherwise forward it to index.php
-RewriteRule . index.php
+RewriteRule ^.*$ /index.php [L]
